metadata/force-app/main/default/objects/CustomName_LzGdP__c/CustomName_LzGdP__c.object-meta.xml
<CustomObject>
    <description>Description_eeaAa</description>
    <label>CustomLabel_xBjdQ</label>
    <nameField>
        <label>CustomLabel_xBjdQ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_xBjdQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>