metadata/force-app/main/default/objects/CustomName_LzGdP__c/fields/CustomField_dXdNe__c.field-meta.xml
<CustomField>
    <fullName>CustomField_dXdNe__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldXirWb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>